@@ -1,3 +1,8 @@
+2001-03-15 John R. Jackson <jrj@purdue.edu>
+
+	* server-src/planner.c (analyze_estimate): Do not do an incremental
+	  if FORCE_NO_BUMP is set and the last dump was a level 0.
+
 2001-03-14 John R. Jackson <jrj@purdue.edu>
 
 	* server-src/amcheck.c: Change message from NOTE to WARNING when
